# esm-jax

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  reusable-ci.yml
esmjax/: __init__.py  _constants.py  _model.py  _tokenizer.py  main.py
esmjax/cambrian/: __init__.py  _model.py
esmjax/esm2/: __init__.py  _model.py  _tokenizer.py
scripts/: convert.py
