[project]
name = "esmjax"
version = "0.1.0"
description = "Jax implementation of the esm2 protein language model."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "equinox>=0.13.2",
    "jax>=0.8.0",
    "jaxtyping>=0.3.3",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I", # isort
]
extend-ignore = [
    "F722", # https://docs.kidger.site/jaxtyping/faq/
]

[dependency-groups]
convert = ["fire>=0.7.1", "transformers>=4.57.1"]
dev = ["ipykernel>=7.1.0", "mypy>=1.18.2", "pytest>=9.0.1", "ruff>=0.14.5"]
