[project]
name = "esmjax"
version = "0.1.0-dev1"
description = "Jax implementation of the esm2 protein language model."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.8",
    "einops>=0.8.1",
    "equinox>=0.13.2",
    "huggingface-hub>=0.36.0",
    "jax>=0.8.0",
    "jaxtyping>=0.3.3",
    "loguru>=0.7.3",
    "torch>=2.9.1",            # convert weights from torch models
    "transformers>=4.57.1",    # load weights for conversion
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I", # isort
]
extend-ignore = [
    "F722", # https://docs.kidger.site/jaxtyping/faq/
]

[dependency-groups]
dev = ["ipykernel>=7.1.0", "pytest>=9.0.1", "ruff>=0.14.5", "ty>=0.0.1a30"]
